[fix] header: fix header wrap on  mobile

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -4,7 +4,6 @@
 	padding: 1.4rem 5rem;
 	box-sizing: border-box;
 	display: flex;
-	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
 	position: fixed;
